# mgfn-weather

./: .gitignore  README.md  docker-compose.yml
mgfn-weather/: .dockerignore  .env.sample  .pre-commit-config.yaml  .test.env  Dockerfile  README.md  alembic.ini  backend_pre_start.py  entrypoint.sh  pyproject.toml
mgfn-weather/migrations/: env.py
mgfn-weather/migrations/versions/: 0001_create_forecasts_and_files_tables.py  __init__.py
mgfn-weather/src/: __init__.py  main.py
mgfn-weather/src/api/: __init__.py
mgfn-weather/src/api/v1/: __init__.py  cities.py  files.py  forecasts.py
mgfn-weather/src/core/: __init__.py  config.py  logging.py
mgfn-weather/src/db/file_storages/: __init__.py  repositories.py
mgfn-weather/src/db/file_storages/minio/: __init__.py
mgfn-weather/src/db/storages/: __init__.py  abstract_repository.py
mgfn-weather/src/db/storages/postgres/: __init__.py  query_models.py  repositories.py
mgfn-weather/src/http/: __init__.py
mgfn-weather/src/http/communicators/: __init__.py
mgfn-weather/src/http/communicators/geodecoders/: __init__.py  openstreetmap.py
mgfn-weather/src/models/: __init__.py
mgfn-weather/src/models/db_entities/: __init__.py  files.py  forecasts.py  mixins.py
mgfn-weather/src/models/schemas/: __init__.py  api_responses.py  common.py  files.py  forecasts.py  weather_providers.py
mgfn-weather/src/models/schemas/geo/: __init__.py  cities.py  coordinates.py
mgfn-weather/src/services/: __init__.py  files.py  forecasts.py
mgfn-weather/src/tests/infra/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
mgfn-weather/src/tests/integrational/: __init__.py  conftest.py
mgfn-weather/src/tests/integrational/tests_v1/: __init__.py
mgfn-weather/src/tests/integrational/tests_v1/cities/: __init__.py  test_cities.py
mgfn-weather/src/tests/integrational/tests_v1/forecasts/: __init__.py  test_forecasts.py
mgfn-weather/src/utils/: __init__.py
mgfn-weather/src/utils/file_generators/: __init__.py  xlsx.py
mgfn-weather/src/utils/file_generators/forecasts/: __init__.py  abc.py  xlsx.py
mgfn-weather/src/utils/weather_providers/: __init__.py  yandex.py
minio/: .env_sample
nginx/: hosts.conf  nginx.conf
